@@ -3,6 +3,12 @@
 	* src/emaWrapper.cpp: EMA functions
 	* man/EMAnext.Rd: Documentation
 
+	* src/smaWrapper.cpp: SMA functions
+	* man/SMAnext.Rd: Documentation
+
+	* src/test.cpp (utsExample): Added docs and example
+	* man/utsExample.Rd: Idem
+
 2018-06-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/test.cpp: Initial commit with original example
